--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,24 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     <style type="text/css">
+        div {
+            font-family: 'Roboto', sans-serif;
+        }
+        
         body {
             margin: 0;
             padding: 0;
             background-image: url("/images/airline.jpg");
-            max-width: 100%;
-            height: auto;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: 100% 100%;
+            margin: 0;
         }
     </style>
 </head>
