--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,12 +16,14 @@
     
     .navlinks {
         display: flex;
+        justify-content: flex-end;
         flex-wrap: wrap;
         align-content: stretch;
         margin-top: 10px;
         margin-left: 100px;
         width: 100%;
         height: auto;
+        margin-right: 100px;
     }
     
     nav-logo {
