--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url("/images/airline.jpg");
+            background-image: url("../images/airline.jpg");
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
